<resources>
    <string name="app_name">MovieCatalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="how_to_train_your_dragon">How to Train Your Dragon</string>
    <string name="dummy_date">12 August 2018</string>
    <string name="dummy_desc">Ketika Hiccup memenuhi mimpinya untuk menciptakan utopia naga yang damai, penemuan Toothless \'dari pasangan yang tak teruji dan sukar ditangkap membuat Night Fury menjauh. Ketika bahaya meningkat di rumah dan pemerintahan Hiccup sebagai kepala desa diuji, baik naga dan pengendara harus membuat keputusan yang mustahil untuk menyelamatkan jenis mereka.</string>
    <string name="the_arrow">The Arrow</string>
    <string name="dummy_tv_desc">Panah adalah menceritakan kembali petualangan dari legendaris DC pahlawan Green Arrow</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="director">Director :</string>
    <string name="hello_movie">HELLO MOVIE</string>
    <string name="empty">Empty</string>
    <string name="poster">Poster</string>
    <string name="batas">|</string>
    <string name="_72">72%</string>
    <string name="user">USER</string>
    <string name="score">SCORE</string>
    <string name="description">DESCRIPTION</string>
    <string name="logo">Logo</string>
    <string name="icon">Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>